first version of button on safari blinking fix

--- a/docs/website/src/site/styles/components/code.scss
+++ b/docs/website/src/site/styles/components/code.scss
@@ -22,11 +22,29 @@ $transition-timing: 300ms;
   border-radius: 6px;
   box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1);
   height: 3.2rem;
+  //will-change: transform;
+  //z-index: 2;
+  opacity: 1;
+  /* stylelint-disable-next-line property-no-vendor-prefix */
+  -webkit-perspective: none;
   position: absolute;
   right: 1.6rem;
   top: 1.6rem;
-  transition: $transition-timing linear;
+  //-webkit-perspective: 20px;
+  //-webkit-backface-visibility: none;
+  //transform-style: preserve-3d;
+  /* stylelint-disable-next-line property-no-vendor-prefix */
+  //-webkit-transform: translate3d(0, 0, 0);
+  //-webkit-transform: translateZ(0);
+  /* stylelint-disable-next-line property-no-vendor-prefix */
+  -webkit-transition: border $transition-timing linear; //none;//border 200ms ease-in;
+  //transform: none;
+  transition: opacity 243ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, transform 162ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+  //transition: border 0.2s 0.1s ease-in-out; //border $transition-timing linear;
+  //-webkit-transition: background-color 300ms ease-in, background-image 1ms;
   width: 3.2rem;
+  //transition-duration: 200ms;
+  //transition-property: background-color;
 
   &:hover {
     background-color: var(--copy-button-background--hover);
@@ -35,6 +53,13 @@ $transition-timing: 300ms;
     background-repeat: no-repeat;
     background-size: 1.4rem;
     border: 1px solid var(--ds-color-blue);
+    height: 3.2rem;
+    opacity: 1;
+    position: absolute;
+    right: 1.6rem;
+    top: 1.6rem;
+    //transition: $transition-timing linear;
+    width: 3.2rem;
   }
 
   &:active {
@@ -44,6 +69,14 @@ $transition-timing: 300ms;
     background-repeat: no-repeat;
     background-size: 1.4rem;
     border: 1px solid var(--ds-color-blue);
+    box-shadow: none;
+    height: 3.2rem;
+    opacity: 1;
+    position: absolute;
+    right: 1.6rem;
+    top: 1.6rem;
+    //transition: $transition-timing linear;
+    width: 3.2rem;
   }
 }
 
